--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <section>
             <div class="formContainer">
 
-                <h2 class="formTitle">GARANTA O SEU LUGAR MO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
+                <h2 class="formTitle">GARANTA O SEU LUGAR NO WORKSHOP DO MAIOR ESPECIALISTA EM MARKETING DA ATUALIDADE</h2>
                 <p class="formDetails">Neste evento, você vai aprender todos os segredos que vão te fazer ser um empreendedor de sucesso sem precisar contar com a sorte</p>
                 
                 <form method="post" action="">
@@ -42,9 +42,9 @@
             <img class="picture" src="/assets/face.jpg" alt="face">
 
             <div class="description">
-                <h3>O palestrante</h3>
-                <p class="p1">Carlos Fontana é conhecido por dar palestras que abalam a estrutura do marketing tradicional. Prepara-se para sair do evento com uma nova visão do que é possível ser feito para o seu negócio decolar.</p>
-                <p class="p2">Formado em Marketing pela Univercidade XYZ e fundador da MarkUp, a empresa vencedora dos últimos 5 Prêmios MarketingBr.</p>
+                <h3>O Palestrante</h3>
+                <p>Carlos Fontana é conhecido por dar palestras que abalam a estrutura do marketing tradicional. Prepara-se para sair do evento com uma nova visão do que é possível ser feito para o seu negócio decolar.</p>
+                <p>Formado em Marketing pela Univercidade XYZ e fundador da MarkUp, a empresa vencedora dos últimos 5 Prêmios MarketingBr.</p>
             </div>
         </footer>
 
