--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <input type="text" name="name" id="name" placeholder="Nome">
                     <input type="email" name="email" id="email" placeholder="Email">
                     
-                    <select name="state">
+                    <select name="states">
                         <option value="sp">São Paulo</option>
                         <option value="rj">Rio de Janeiro</option>
                         <option value="es">Espirito Santo</option>
